--- a/env.yaml
+++ b/env.yaml
@@ -1,4 +1,4 @@
-name: szj_torch_1.7
+name: lgan_torch_1.7
 channels:
   - pytorch
   - defaults
@@ -80,4 +80,4 @@ dependencies:
     - urllib3==1.26.6
     - visdom==0.1.8.9
     - websocket-client==1.2.1
-prefix: /home/szj2020/.conda/envs/szj_torch_1.7
+prefix: /home/user/.conda/envs/lgan_torch_1.7
