--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,43 +1,76 @@
+# the name of the model, keep the default
 model: 'm'
+# the enlarge scale of the model, 4 means X4 model. 2 3 4 are optional
 scale: 4
+# the range of input image. 255 means the common images. keep the default if you don`t know how to set this
 rgb_range: 255
+# channels of the input image. 3 means 3 channels, e.g. R,G,B
 colors: 3
+# numbers of lgab module, keep default when you first use this network
 n_lgab: 24
+# channel of lgab module, keep default when you first use this network
 c_lgan: 60
+# not used in LGAN, but is used in ELAN, just keep the default
 n_share: 0
+# keep the default
 r_expand: 2
+#activation function, gelu relu silu are optional
 act_type: 'gelu'
 #act_type: 'relu'
 #act_type: 'silu'
+# optimization function , lamb adam optional
 #optim: 'lamb'
 optim: 'adam'
+# float number precision, 16 32 64, keep the default
 fp: 32
+#loss function, SmoothL1Loss L1Loss are optional
 loss: 'SmoothL1Loss'
 #loss: 'L1Loss'
+# the size of SWA and WA
 window_sizes: [15,10,5]
+# if you set the pretrain model, this program will train the model from the model.
+# if you want to train the model from zero, please keep the path to none
+# pretain:
 pretrain: '../pre_trained_models/model_x4_182.pt'
 
 ## parameters for model training
+# the size of input image
 patch_size: 60
+# the number of a batch
 batch_size: 64
+# repeat the training dataset
 data_repeat: 80
+# use the data augment or not, 0 means not
 data_augment: 1
 
+# the epochs of training
 epochs: 1000
+# the initial learning rate
 lr: 0.0002
+# the decay epochs of the learning rate. more details can refer the paper
 decays: [500,800,900,950]
+# keep the default
 gamma: 0.5
+# train log every 100 times.
 log_every: 100
+# test log each time
 test_every: 1
+# the path to restore the log file
 log_path: "./experiments"
+# the name of log file, you can keep default if you don`t set this parameter
 log_name:
+# set the custom image you want to super resolution
 custom_image_path: './custom_image'
 
 ## hardware specification
+# specify the GPUs you want to use. [0] means using the first GPU. [1,3] means using second and fourth GPU
 gpu_ids: [0]
+# threads to work, 16 is reasonable
 threads: 16
 
 ## data specification
+# the path train and test dateset. You can download the dataset in this project
 data_path: '../SR_datasets'
+# The test dataset when you are training. If you test all datasets every epoch, it will spend lots of time.
 eval_sets: ['Set5', 'Set14']
 #eval_sets: ['Set5', 'Set14', 'B100', 'Urban100', 'Manga109']
